--- a/big2test.html
+++ b/big2test.html
@@ -73,9 +73,9 @@
 
     <!-- 切換三個頁面的按鈕區 -->
     <div class="switch-buttons">
-        <button id="btnSetting">遊戲設定</button>
-        <button id="btnCount">分數計算</button>
-        <button id="btnScore">每場結果</button>
+        <button id="btnSetting">設定</button>
+        <button id="btnCount">計分</button>
+        <button id="btnScore">結果</button>
     </div>
 
     <!-- 內嵌頁面 (iframe) -->
